--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,7 +1,4 @@
-.avenir {
+.avenir, .athelas, .serif {
   font-family: 'Noto Sans JP'!important;
-}
-
-.athelas {
-  font-family: 'Noto Sans JP'!important;
+  font-weight: 400;
 }
